fixed an overlap issue w/ footer and body on index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,10 @@ body{
     }
 
 }
+@media only screen and (max-width: 640px) {
+
+    .pageName{
+    width:100%;
+    }
+
+}
